# next-fastapi-monorepo

./: .gitignore  README.md  pnpm-lock.yaml  turbo.json
apps/api/: pyproject.toml
apps/api/api/: main.py
apps/web/src/app/: page.tsx
apps/web/src/widgets/: index.ts
apps/web/src/widgets/top/: index.ts  ui.tsx
