[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend for the online salon"
authors = [
    {name = "Yoshi",email = "yoshiishigami.com@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
